--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# to have data of sql query
+spring.jpa.show-sql=true 
+# to store data in order
+spring.jpa.properties.hibernate.format_sql=true
+Query
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
