--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 # to store data in order
 spring.jpa.properties.hibernate.format_sql=true
-Query
+# Query of mysql version
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
